--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,5 +1,9 @@
 RewriteEngine on
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !^/test.php$ [NC]
+RewriteCond %{REQUEST_URI} !^/favicon.ico$ [NC]
 RewriteRule ^(.*)$ /index.php?url=$1 [QSA,L]
+
 ErrorDocument 404 /error/notfound
